--- a/assets/output.css
+++ b/assets/output.css
@@ -605,9 +605,6 @@
   .x\:m-5 {
     margin: calc(var(--x-spacing) * 5) !important;
   }
-  .x\:mx-10 {
-    margin-inline: calc(var(--x-spacing) * 10) !important;
-  }
   .x\:mx-auto {
     margin-inline: auto !important;
   }
@@ -620,6 +617,9 @@
   .x\:mt-8 {
     margin-top: calc(var(--x-spacing) * 8) !important;
   }
+  .x\:mr-auto {
+    margin-right: auto !important;
+  }
   .x\:mb-4 {
     margin-bottom: calc(var(--x-spacing) * 4) !important;
   }
@@ -631,6 +631,9 @@
   }
   .x\:ml-5 {
     margin-left: calc(var(--x-spacing) * 5) !important;
+  }
+  .x\:ml-auto {
+    margin-left: auto !important;
   }
   .x\:flex {
     display: flex !important;
@@ -677,12 +680,6 @@
   .x\:h-\[15rem\] {
     height: 15rem !important;
   }
-  .x\:h-\[20rem\] {
-    height: 20rem !important;
-  }
-  .x\:h-\[32rem\] {
-    height: 32rem !important;
-  }
   .x\:h-\[60px\] {
     height: 60px !important;
   }
@@ -691,6 +688,12 @@
   }
   .x\:h-\[200px\] {
     height: 200px !important;
+  }
+  .x\:h-\[20rem\] {
+    height: 20rem !important;
+  }
+  .x\:h-\[32rem\] {
+    height: 32rem !important;
   }
   .x\:h-\[294px\] {
     height: 294px !important;
@@ -749,8 +752,20 @@
   .x\:w-\[14rem\] {
     width: 14rem !important;
   }
+  .x\:w-\[30rem\] {
+    width: 30rem !important;
+  }
+  .x\:w-\[32rem\] {
+    width: 32rem !important;
+  }
+  .x\:w-\[35rem\] {
+    width: 35rem !important;
+  }
   .x\:w-\[50rem\] {
     width: 50rem !important;
+  }
+  .x\:w-\[70\%\] {
+    width: 70% !important;
   }
   .x\:w-\[120px\] {
     width: 120px !important;
@@ -761,23 +776,11 @@
   .x\:w-\[21\.875rem\] {
     width: 21.875rem !important;
   }
-  .x\:w-\[30rem\] {
-    width: 30rem !important;
-  }
-  .x\:w-\[32rem\] {
-    width: 32rem !important;
-  }
-  .x\:w-\[70\%\] {
-    width: 70% !important;
+  .x\:w-\[70rem\] {
+    width: 70rem !important;
   }
   .x\:w-\[350px\] {
     width: 350px !important;
-  }
-  .x\:w-\[35rem\] {
-    width: 35rem !important;
-  }
-  .x\:w-\[70rem\] {
-    width: 70rem !important;
   }
   .x\:w-\[calc\(33\.333\%-1\.5rem\)\] {
     width: calc(33.333% - 1.5rem) !important;
@@ -1142,6 +1145,9 @@
   .x\:pb-\[40px\] {
     padding-bottom: 40px !important;
   }
+  .x\:pl-4 {
+    padding-left: calc(var(--x-spacing) * 4) !important;
+  }
   .x\:pl-10 {
     padding-left: calc(var(--x-spacing) * 10) !important;
   }
@@ -1354,6 +1360,11 @@
       @media (hover: hover) {
         opacity: 70% !important;
       }
+    }
+  }
+  .x\:last\:justify-end {
+    &:last-child {
+      justify-content: flex-end !important;
     }
   }
   .x\:checked\:border-black {
@@ -1594,6 +1605,12 @@
   .profile__order-img {
     height: 100% !important;
     width: 100% !important;
+  }
+  .custom-search__bar-list {
+    display: flex !important;
+    height: calc(var(--x-spacing) * 6) !important;
+    width: calc(var(--x-spacing) * 64) !important;
+    align-items: center !important;
   }
 }
 @keyframes spin {
